rust/tests/snapshots/test_nom_from_file__output2_3.snap
---
source: rust/tests/test_nom_from_file.rs
expression: parsed
---
name: ClpDefaultName
sense: Minimize
objectives:
  obj:
    name: obj
    coefficients:
      - name: x0
        value: 2.1
      - name: x1
        value: 1000
      - name: x2
        value: 2.2
      - name: x3
        value: 1000
      - name: x4
        value: 2.3
      - name: x5
        value: 1000
      - name: x6
        value: 1.1
      - name: x7
        value: 1.2
      - name: x8
        value: 1.3
constraints:
  cons0:
    type: Standard
    name: cons0
    coefficients:
      - name: x0
        value: 1
      - name: x1
        value: 1
    operator: LTE
    rhs: 21.1
  cons0_low:
    type: Standard
    name: cons0_low
    coefficients:
      - name: x0
        value: 1
      - name: x1
        value: 1
    operator: GTE
    rhs: 0
  cons1:
    type: Standard
    name: cons1
    coefficients:
      - name: x2
        value: 1
      - name: x3
        value: 1
    operator: LTE
    rhs: 22.2
  cons1_low:
    type: Standard
    name: cons1_low
    coefficients:
      - name: x2
        value: 1
      - name: x3
        value: 1
    operator: GTE
    rhs: 0
  cons2:
    type: Standard
    name: cons2
    coefficients:
      - name: x4
        value: 1
      - name: x5
        value: 1
    operator: LTE
    rhs: 23.3
  cons2_low:
    type: Standard
    name: cons2_low
    coefficients:
      - name: x4
        value: 1
      - name: x5
        value: 1
    operator: GTE
    rhs: 0
  cons3:
    type: Standard
    name: cons3
    coefficients:
      - name: x6
        value: 1
    operator: LTE
    rhs: 11.1
  cons3_low:
    type: Standard
    name: cons3_low
    coefficients:
      - name: x6
        value: 1
    operator: GTE
    rhs: 0
  cons4:
    type: Standard
    name: cons4
    coefficients:
      - name: x0
        value: -1.1
      - name: x7
        value: 1
    operator: EQ
    rhs: 0
  cons5:
    type: Standard
    name: cons5
    coefficients:
      - name: x8
        value: 1
    operator: LTE
    rhs: 12.2
  cons5_low:
    type: Standard
    name: cons5_low
    coefficients:
      - name: x8
        value: 1
    operator: GTE
    rhs: 0
  cons6:
    type: Standard
    name: cons6
    coefficients:
      - name: x2
        value: -1.1
      - name: x8
        value: 1
    operator: EQ
    rhs: 0
  cons7:
    type: Standard
    name: cons7
    coefficients:
      - name: x8
        value: 1
    operator: LTE
    rhs: 13.3
  cons7_low:
    type: Standard
    name: cons7_low
    coefficients:
      - name: x8
        value: 1
    operator: GTE
    rhs: 0
  cons8:
    type: Standard
    name: cons8
    coefficients:
      - name: x4
        value: -1.1
      - name: x8
        value: 1
    operator: EQ
    rhs: 0
variables:
  x0:
    name: x0
    var_type:
      DoubleBound:
        - 0
        - 21.1
  x1:
    name: x1
    var_type: Free
  x2:
    name: x2
    var_type:
      DoubleBound:
        - 0
        - 22.2
  x3:
    name: x3
    var_type: Free
  x4:
    name: x4
    var_type:
      DoubleBound:
        - 0
        - 23.3
  x5:
    name: x5
    var_type: Free
  x6:
    name: x6
    var_type:
      DoubleBound:
        - 0
        - 11.1
  x7:
    name: x7
    var_type:
      DoubleBound:
        - 0
        - 12.2
  x8:
    name: x8
    var_type:
      DoubleBound:
        - 0
        - 13.3
